# tricord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: check.yml  publish.yml
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: cli.rs  format.rs  lib.rs  main.rs  record.rs  run.rs  sampler.rs  signals.rs
src/platform/: linux.rs  macos.rs  mod.rs
tests/: integration.rs
